<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:onClick="replayMeeting"
            android:title="@string/play_meeting_wav" />
        <item
            android:onClick="launchMainActivity"
            android:title="@string/launch_main_activity" />
        <item
            android:onClick="showRawFile"
            android:title="@string/show_raw_file" />
        <item
            android:onClick="showWavFile"
            android:title="@string/show_wav_file" />
        <item
            android:onClick="showMfcFile"
            android:title="@string/show_mfc_file" />
        <item
            android:onClick="showUemSegFile"
            android:title="@string/show_uem_seg_file" />
        <item
            android:onClick="showSSegFile"
            android:title="@string/show_s_seg_file" />
        <item
            android:onClick="showLSegFile"
            android:title="@string/show_l_seg_file" />
        <item
            android:onClick="launchAboutActivity"
            android:title="@string/launch_about_activity" />
    </group>
</menu>