<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:weightSum="100">

        <com.echo.holographlibrary.PieGraph
            android:id="@+id/graph"
            android:layout_width="wrap_content"
            android:layout_height="212dp"
            android:layout_weight="20"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20">

            <GridLayout
                android:id="@+id/speaker_duration_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:paddingTop="5dp"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker_name_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker_time_title"
                    android:textStyle="bold"
                    android:layout_gravity="right" />

                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/speaker_barchart_title"-->
                <!--android:textStyle="bold" />-->

            </GridLayout>
        </ScrollView>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:layout_weight="50">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/timeGraph">
            </LinearLayout>
        </HorizontalScrollView>


        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_weight="10">

            <Button
                android:id="@+id/button_new_meeting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:onClick="newMeeting"
                android:text="@string/button_new_meeting" />

            <Button
                android:id="@+id/button_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:onClick="share"
                android:text="@string/button_share" />

        </GridLayout>

    </LinearLayout>

    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer" />
</android.support.v4.widget.DrawerLayout>